# veriroute

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  journal.md  pyproject.toml
agent/: __init__.py  classifier.py  config.py  deadline.py  fireworks_client.py  http_client.py  io_utils.py  local_llm.py  main.py  model_ranking.py  pot.py  sandbox.py  verifiers.py
agent/captioner/: __init__.py  eye.py  frames.py  runner.py  stylist.py
eval/: gen_eval.py  hidden_like.jsonl  hidden_like_tasks.json  judge_eval.py  practice_tasks.json  results.json  results10.json  results2.json  results3.json  results4.json  results5.json  results6.json  results7.json  results8.json  results9.json
media/: make_media.py
scripts/: escalation_proxy.py  measure_stylist.py
tests/: test_captioner.py  test_classifier.py  test_fireworks_client.py  test_io_utils.py  test_kill_resilience.py  test_model_ranking.py  test_sandbox_pot.py  test_verifiers.py
