[project]
name = "veriroute"
version = "0.1.0"
description = "Verification-driven token-efficient routing agent (AMD Hackathon ACT II, Track 1)"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
